# AdventOfCode

./: .gitignore  CMakeLists.txt
2015/day01/: CMakeLists.txt  day01a.m.cpp  day01b.m.cpp
2015/day02/: CMakeLists.txt  day02a.m.cpp  day02b.m.cpp
2015/day03/: CMakeLists.txt  day03a.m.cpp  day03b.m.cpp
2015/day04/: CMakeLists.txt  day04a.m.cpp  day04b.m.cpp
2015/day05/: CMakeLists.txt  day05a.m.cpp  day05b.m.cpp
2015/day06/: CMakeLists.txt  day06a.m.cpp  day06b.m.cpp
2015/day07/: CMakeLists.txt  day07a.m.cpp  day07b.m.cpp
2016/d01/: CMakeLists.txt  aoc2016d01a.m.cpp  aoc2016d01b.m.cpp
2016/d02/: CMakeLists.txt  aoc2016d02a.m.cpp  aoc2016d02b.m.cpp
2016/d03/: CMakeLists.txt  aoc2016d03a.m.cpp  aoc2016d03b.m.cpp
2016/d04/: CMakeLists.txt  aoc2016d04a.m.cpp  aoc2016d04b.m.cpp
2017/day01/: day1a_main.cpp
2017/day02/: day02a_main.cpp  day02b_main.cpp
2017/day03/: CMakeLists.txt  day03_main.cpp  day03b_main.cpp
2017/day04/: day04_main.cpp
2017/day05/: day05_main.cpp
2017/day06/: day06_main.cpp
2017/day07/: CMakeLists.txt  common.h  day07a_main.cpp  day07b_main.cpp
2017/day08/: common.h  day08a_main.cpp
2017/day09/: day09a_main.cpp
2017/day10/: common.h  day10a_main.cpp  day10b_main.cpp
2017/day12/: day12a_main.cpp  day12b_main.cpp
2018/day01/: CMakeLists.txt  day01a_main.cpp  day01b_main.cpp
2018/day02/: CMakeLists.txt  day02a_main.cpp  day02b_main.cpp
2018/day03/: CMakeLists.txt  day03a_main.cpp  day03b_main.cpp
2018/day04/: CMakeLists.txt  day04a_main.cpp  day04b_main.cpp
2018/day05/: CMakeLists.txt  day05a_main.cpp  day05b_main.cpp
2018/day06/: CMakeLists.txt  day06a_main.cpp  day06b_main.cpp
2018/day07/: CMakeLists.txt  day07a_main.cpp  day07b_main.cpp
2018/day08/: CMakeLists.txt  day08a_main.cpp  day08b_main.cpp
2018/day09/: CMakeLists.txt  day09a_main.cpp
2018/day10/: CMakeLists.txt  day10_main.cpp
2018/day11/: CMakeLists.txt  day11a_main.cpp  day11b_main.cpp
2018/day12/: CMakeLists.txt  day12a_main.cpp
2018/day13/: CMakeLists.txt  day13a_main.cpp  input.txt
2018/day16/: CMakeLists.txt  day16a_main.cpp  day16b_main.cpp
2018/day18/: CMakeLists.txt  day18a_main.cpp  day18b_main.cpp
2019/day01/: CMakeLists.txt  day01a_main.cpp  day01b_main.cpp  input.txt
2019/day02/: CMakeLists.txt  day02a_main.cpp  day02b_main.cpp
2019/day03/: CMakeLists.txt  day03a_main.cpp  day03b_main.cpp
2019/day04/: CMakeLists.txt  day04a_main.cpp  day04b_main.cpp
2019/day05/: CMakeLists.txt  day05a_main.cpp  day05b_main.cpp
2019/day06/: CMakeLists.txt  day06a_main.cpp  day06b_main.cpp
2019/day07/: CMakeLists.txt  day07a_main.cpp  day07b_main.cpp
2020/day01/: CMakeLists.txt  day01a.m.cpp  day01b.m.cpp
2020/day02/: CMakeLists.txt  day02a.m.cpp  day02b.m.cpp
2020/day03/: CMakeLists.txt  day03a.m.cpp  day03b.m.cpp
2020/day04/: CMakeLists.txt  day04a.m.cpp  day04b.m.cpp
2020/day05/: CMakeLists.txt  day05a.m.cpp  day05b.m.cpp
2020/day06/: CMakeLists.txt  day06a.m.cpp  day06b.m.cpp
2020/day07/: CMakeLists.txt  day07a.m.cpp  day07b.m.cpp
2020/day08/: CMakeLists.txt  day08a.m.cpp  day08b.m.cpp
2020/day09/: CMakeLists.txt  day09a.m.cpp  day09b.m.cpp
2020/day10/: CMakeLists.txt  day10a.m.cpp  day10b.m.cpp
2020/day11/: CMakeLists.txt  day11a.m.cpp  day11b.m.cpp
2020/day12/: CMakeLists.txt  day12a.m.cpp  day12b.m.cpp
2020/day13/: CMakeLists.txt  day13a.m.cpp  day13b.m.cpp
2020/day14/: CMakeLists.txt  day14a.m.cpp  day14b.m.cpp
2020/day15/: CMakeLists.txt  day15a.m.cpp  day15b.m.cpp
2020/day16/: CMakeLists.txt  day16a.m.cpp  day16b.m.cpp
2020/day17/: CMakeLists.txt  day17a.m.cpp
2020/day18/: CMakeLists.txt  calc1.cpp  calc1.h  calc2.cpp  calc2.h  day18a.m.cpp  day18b.m.cpp  tokenstream.cpp  tokenstream.h
2020/day19/: CMakeLists.txt  day19a.m.cpp  day19b.m.cpp
2020/day20/: CMakeLists.txt  day20a.m.cpp  day20b.m.cpp
2020/day21/: CMakeLists.txt  day21a.m.cpp
2020/day22/: CMakeLists.txt  day22a.m.cpp
2020/day23/: CMakeLists.txt  day23a.m.cpp  day23alistversion.m.cpp  day23b.m.cpp
2020/day24/: CMakeLists.txt  day24a.m.cpp  day24a_alt.m.cpp  day24b.m.cpp
2020/day25/: CMakeLists.txt  day25a.m.cpp
2021/d01/: CMakeLists.txt  aoc2021d01a.m.cpp  aoc2021d01b.m.cpp
2021/d02/: CMakeLists.txt  aoc2021d02a.m.cpp  aoc2021d02b.m.cpp
2021/d03/: CMakeLists.txt  aoc2021d03a.m.cpp  aoc2021d03b.m.cpp
2021/d04/: CMakeLists.txt  aoc2021d04a.m.cpp  aoc2021d04b.m.cpp
2021/d05/: CMakeLists.txt  aoc2021d05a.m.cpp  aoc2021d05b.m.cpp
2021/d06/: CMakeLists.txt  aoc2021d06a.m.cpp  aoc2021d06b.m.cpp
2021/d07/: CMakeLists.txt  aoc2021d07a.m.cpp  aoc2021d07b.m.cpp
2021/d08/: CMakeLists.txt  aoc2021d08a.m.cpp  aoc2021d08b.m.cpp
2021/d09/: CMakeLists.txt  aoc2021d09a.m.cpp  aoc2021d09b.m.cpp
2021/d10/: CMakeLists.txt  aoc2021d10a.m.cpp  aoc2021d10b.m.cpp
2021/d11/: CMakeLists.txt  aoc2021d11a.m.cpp
2021/d12/: CMakeLists.txt
2021/d13/: CMakeLists.txt  aoc2021d13a.m.cpp
2021/d14/: CMakeLists.txt  aoc2021d14a.m.cpp  aoc2021d14b.m.cpp
2021/d17/: CMakeLists.txt  aoc2021d17a.m.cpp
2021/d18/: CMakeLists.txt  aoc2021d18a.m.cpp  aoc2021d18b.m.cpp
2021/d19/: CMakeLists.txt
2021/d20/: CMakeLists.txt  aoc2021d20a.m.cpp
2021/d21/: CMakeLists.txt  aoc2021d21a.m.cpp  aoc2021d21b.m.cpp
2021/d22/: CMakeLists.txt  aoc2021d22a.m.cpp
2021/d23/: CMakeLists.txt  aoc2021d23a.m.cpp  aoc2021d23b.m.cpp
2021/d24/: CMakeLists.txt  aoc2021d24a.m.cpp
2021/d25/: CMakeLists.txt  aoc2021d25a.m.cpp
2022/d01/: CMakeLists.txt  aoc2022d01a.m.cpp  aoc2022d01b.m.cpp
2022/d02/: CMakeLists.txt  aoc2022d02a.m.cpp  aoc2022d02b.m.cpp  aoc2022d02bAlt.m.cpp
2022/d03/: CMakeLists.txt  aoc2022d03a.m.cpp  aoc2022d03b.m.cpp
2022/d04/: CMakeLists.txt  aoc2022d04a.m.cpp  aoc2022d04b.m.cpp
2022/d05/: CMakeLists.txt  aoc2022d05a.m.cpp  aoc2022d05b.m.cpp
2022/d06/: CMakeLists.txt  aoc2022d06a.m.cpp  aoc2022d06b.m.cpp
2022/d07/: CMakeLists.txt  aoc2022d07a.m.cpp  aoc2022d07b.m.cpp
2022/d08/: CMakeLists.txt  (+2 more)
2023/d23/: CMakeLists.txt  aoc2023d23a.m.cpp  aoc2023d23b.m.cpp
2024/d25/: CMakeLists.txt  aoc2024d25a.m.cpp
(+106 files in other folders)
